cmake list with test folder

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,5 @@
+option(build_tests "Build CTL's tests." OFF)
+
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 PROJECT(CTL CXX)
 
@@ -8,4 +10,8 @@ SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
 ADD_DEFINITIONS(-g -Wall)
 
 ADD_SUBDIRECTORY(src lib)
-ADD_SUBDIRECTORY(example)
+
+if (build_test)
+  ADD_SUBDIRECTORY(test)
+endif()
+
