shitgit add .! no progress

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,2 +1,3 @@
-SET(CTL_LIB_SRC CTL/quicksort CTL/mergesort CTL/stack)
+SET(CTL_LIB_SRC CTL/quicksort CTL/mergesort CTL/stack 
+  CTL/insertsort CTL/queue CTL/linkedlist)
 ADD_LIBRARY(CTL SHARED ${CTL_LIB_SRC})
