--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,4 @@
 SET(CTL_LIB_SRC CTL/quicksort CTL/mergesort CTL/stack 
-  CTL/insertsort CTL/queue CTL/linkedlist)
+  CTL/insertsort CTL/queue CTL/linkedlist CTL/heap)
+
 ADD_LIBRARY(CTL SHARED ${CTL_LIB_SRC})
